@@ -312,4 +312,10 @@
   <data name="TimeoutGettingConnection" xml:space="preserve">
     <value>error connecting: Timeout expired.  The timeout period elapsed prior to obtaining a connection from the pool.  This may have occurred because all pooled connections were in use and max pool size was reached.</value>
   </data>
+  <data name="ParameterAlreadyDefined" xml:space="preserve">
+    <value>Parameter '{0}' has already been defined.</value>
+  </data>
+  <data name="ParameterMustBeDefined" xml:space="preserve">
+    <value>Parameter '{0}' must be defined.</value>
+  </data>
 </root>
