@@ -1,4 +1,4 @@
-MySQL Connector/Net 5.0.3
+MySQL Connector/Net 5.0.4
 MySQL AB's ADO.Net Driver for MySQL
 Copyright (c) 2004-2006 MySQL AB
 
